--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -49,28 +49,7 @@ top: 0px;
 z-index: -1;
 background: linear-gradient(#00000035, #00000000, #00000059);">
 </div>
-<!--
-<div style="
-position: fixed;
-width: 100%;
-height: 10%;
-left: 0px;
-top: 90%;
-z-index: -1;
-background: linear-gradient(#00000000, #00000099);">
-</div>
 
-<div style="
-    margin: 0;
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    -webkit-animation:hue 15s linear infinite;
-z-index: 1;">
-</div>
--->
 
 <div>
 <style>
@@ -96,7 +75,7 @@ z-index: 1;">
 
 <div class="main">
 
-<h1> Co daje ranga VIP/Donator? </h1>
+<h1> Co daje ranga VIP? </h1>
 <ul>
 <li>specjalny prefiks na czacie</li>
 <li>możliwość formatowania tekstu na czacie i na tabliczkach</li>
@@ -117,14 +96,13 @@ z-index: 1;">
 <li>10 miejsc na aukcjach /ca (zamiast 5 u VIPa i Gracza)</li>
 <li>możliwość darmowego latania na działkach komendą /lot</li>
 </ul>
-<h3>Ranga GraczTP usuwa kilkuminutowy czas oczekiwania na kolejne użycie teleportacji.</h3>
  <p style="margin: 64px"></p>
-<h3>Aby zakupić rangę GraczTP, VIP lub SVIP SMSem, kliknij <a href="https://serwer1908450.home.pl/sklep">tutaj</a>.</h3>
-<h3>Aby zakupić rangę GraczTP, VIP lub SVIP innymi metodami (w tym PaySafeCard, blik, przelew i wiele więcej!), skontaktuj się z właścicielem serwera (deaphuz).</h3>
-<h4>Cena VIPa przy metodzie płatności innej niż SMS wynosi 8zł/miesiąc, cena rangi GraczTP - 2zł/miesiąc, a cena SVIPa - 16zł/miesiąc.<br>Rangę można kupić na dowolny okres czasu podany w dniach :)</h4>
+<!-- <h3>Aby zakupić rangę VIP lub SVIP SMSem, kliknij <a href="https://serwer1908450.home.pl/sklep">tutaj</a>.</h3> -->
+<h3>Aby zakupić rangę VIP lub SVIP (PaySafeCard, blik, przelew i wiele więcej!), skontaktuj się z właścicielem serwera (deaphuz).</h3>
+<h4>Cena VIPa przy metodzie płatności innej niż SMS wynosi 8zł/miesiąc, a cena SVIPa - 16zł/miesiąc.<br>Rangę można kupić na dowolny okres czasu podany w dniach :)</h4>
 <p><a href="http://lvlup.pro/wallet/38610">Link do płatności</a></p>
 <p></p>
-<h2> Alternatywne sposoby zdobycia rangi VIP/Donator:</h2>
+<h2> Alternatywne sposoby zdobycia rangi VIP:</h2>
 <p>
 1. Zgłaszaj bugi serwera!</p>
 <p>
@@ -133,7 +111,7 @@ Jeżeli to, co odkrył(eś/aś) okaże faktycznie okaże się bugiem to zostanie
 Ranga zostaje przydzielona na czas od paru dni do nawet miesiąca w zależności od rozmiaru/znaczenia błędu.
 </p>
 <p>2. Wesprzyj serwer!</p>
-Jeżeli wesprzesz serwer pieniężnie (PayPal), możesz otrzymać rangę Donator na czas wg przelicznika 8zł/miesiąc.
+Jeżeli wesprzesz serwer pieniężnie (PayPal), możesz otrzymać rangę VIP na czas wg przelicznika 8zł/miesiąc.
 Aby to uczynić, skontaktuj się z właścicielem serwera (deaphuz).
 </p>
 <p>3. Nagrywaj i streamuj z serwera! </p>
