--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header14 cid-s8YME4c0Hb mbr-fullscreen mbr-parallax-background" id="header14-v">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header14 cid-s8YME4c0Hb mbr-fullscreen mbr-parallax-background" id="header14-v">
 
     
 
@@ -81,7 +81,7 @@
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>4Fun Cuboids</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-5">Definiujemy Freebuild na nowo
 <br>i czynimy go innym, lepszym.</p>
-                    <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="https://mobiri.se">Zobacz, dlaczego warto u nas grać</a>
+                    <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="index.html#features1-n">Zobacz, dlaczego warto u nas grać</a>
                         <a class="btn btn-warning display-4" href="index.html#content5-y">Wejdź na serwer: 4funsv.ml</a></div>
                 </div>
             </div>
