--- a/prezentacja.html
+++ b/prezentacja.html
@@ -48,7 +48,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#top">Strona główna</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="prezentacja.html#top" aria-expanded="false">
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="prezentacja.html#image3-t" aria-expanded="false" target="_blank">
                             Prezentacja</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://docs.google.com/document/d/1bEotHCPLfuwuwL_pGxShD-kZ6HjqKE-WfGhYwdvqQgA/edit?usp=sharing" aria-expanded="false" target="_blank">
                             Regulamin</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://dphz.github.io/sv/jak-zdobyc-vipa/" aria-expanded="false" target="_blank">VIP</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://discord.gg/qBnWd2F" aria-expanded="false" target="_blank">
                             Discord</a></li></ul>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="image3 cid-s8YIWkbMAn" id="image3-t">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="image3 cid-s8YIWkbMAn" id="image3-t">
     
 
     
