--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#top">Strona główna</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="prezentacja.html#top" aria-expanded="false">
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="prezentacja.html#image3-t" aria-expanded="false" target="_blank">
                             Prezentacja</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://docs.google.com/document/d/1bEotHCPLfuwuwL_pGxShD-kZ6HjqKE-WfGhYwdvqQgA/edit?usp=sharing" aria-expanded="false" target="_blank">
                             Regulamin</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://dphz.github.io/sv/jak-zdobyc-vipa/" aria-expanded="false" target="_blank">VIP</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://discord.gg/qBnWd2F" aria-expanded="false" target="_blank">
                             Discord</a></li></ul>
@@ -65,7 +65,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header14 cid-s8YME4c0Hb mbr-fullscreen mbr-parallax-background" id="header14-v">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="header14 cid-s8YME4c0Hb mbr-fullscreen mbr-parallax-background" id="header14-v">
 
     
 
@@ -115,7 +115,7 @@
                     <div class="card-box align-center">
                         <span class="mbr-iconfont mobi-mbri-responsive-2 mobi-mbri"></span>
                         <h5 class="card-title align-center mbr-fonts-style display-7"><strong>Innowacyjność</strong></h5>
-                        <p class="card-text align-center mbr-fonts-style display-5">Wprowadzamy przełomowe rozwiązania, które pozwalają naszym graczom tworzyć to, czego pragną.<br><br><a href="prezentacja.html#top" class="text-warning text-primary">Zobacz prezentację</a></p>
+                        <p class="card-text align-center mbr-fonts-style display-5">Wprowadzamy przełomowe rozwiązania, które pozwalają naszym graczom tworzyć to, czego pragną.<br><br><a href="prezentacja.html#image3-t" class="text-warning text-primary" target="_blank">Zobacz prezentację</a></p>
                     </div>
                 </div>
             </div>
