--- a/jasny/index.html
+++ b/jasny/index.html
@@ -1,16 +1,16 @@
-﻿<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html lang="pl"> 
 <head>
   <meta charset="utf-8" />
   <title>Najlepsze Seriale, subiektywne Top 5.</title>
-  <meta name="description" content="Serwis prezentuje subiektywne top 5 serialii telewizyjnych, zobacz czy je znasz."/>
+  <meta name="description" content="Serwis prezentuje subiektywne top 5 seriali telewizyjnych, zobacz czy je znasz."/>
   <meta name="keywords" content="filmy, kino, najepsze filmy, komedia, top 10 filmów" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
   
    <style>
    #container 
     {
-     width: 1000px;
+     width: 75%;
 	 margin-left: auto;
 	 margin-right: auto;
 	}
@@ -25,9 +25,8 @@
 	 {
 	 float: left;
 	 background-color: gray;
-	 width: 480px;
-	 min-height: 1340px;
-	 max-height: 1340px;
+	 min-width: 480px;
+	 width: 35%;
 	 padding: 10px;
 	 padding: 10px;
 	 }
@@ -35,9 +34,7 @@
 	 {
 	 float: left;
 	 padding: 20px;
-	 width: 280px;
-	 min-height: 1320px;
-	 max-height: 1320px;
+	 width: 20%;
 	 background-color: lightgray;
     }
 	 #ad
